# restshop

./: pyproject.toml
shop_project/: .prospector.yaml  Dockerfile  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
shop_project/catalog/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop_project/catalog/management/commands/: telegram_bot.py
shop_project/catalog/tests/: test_catalog.py  tests_client_views.py
shop_project/catalog/tests/fixtures/: categories_fixture.json  discounts_fixture.json  producers_fixture.json  products_fixture.json
shop_project/shop_project/: __init__.py  celery.py  settings.py  urls.py
shop_project/users/: models.py  urls.py  views.py
shop_project/users/tests/: tests_users.py
